--- a/block-BJaake/code/index.html
+++ b/block-BJaake/code/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>News App</title>
   </head>
   <body>
+    <header>
+      <h1>Space News Everywhere</h1>
+    </header>
+    <div class="container">
+      <div class="options">
+        <select name="" id="">
+          <option value="">Select the Source</option>
+        </select>
+      </div>
+      <ul class="news"></ul>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
