--- a/block-BJaajw/code/index.html
+++ b/block-BJaajw/code/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Space News Everywhere</h1>
+    </header>
+    <div class="container">
+      <div class="error_msg"></div>
+      <div class="main">
+        <div class="options">
+          <select name="" id="">
+            <option value="">Select the Source</option>
+          </select>
+        </div>
+        <ul class="news"></ul>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
