--- a/block-BJaakg/code/index.html
+++ b/block-BJaakg/code/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h2>List of GOT books</h2>
+      <div class="list">
+        <ul class="book--list flex"></ul>
+      </div>
+      <div class="modal_window">
+        <span class="modal_close btn">Close</span>
+        <h3>Character List</h3>
+        <ul class="characters"></ul>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
